<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:textSize="45sp"
        android:maxLength="10"
        android:textColor="#000"
        android:layout_gravity="center"
        android:cursorVisible="true"
        android:gravity="right"
        />

    <TableLayout
        android:id="@+id/tablelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >


            <Button
                android:id="@+id/reset"
                android:layout_width="105dp"
                android:layout_height="80dp"
                android:text="@string/reset"
                android:textColor="#FFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/squ"
                android:layout_width="105dp"
                android:layout_height="80dp"
                android:text="pow"
                android:textColor="#FFF"
                android:textSize="30sp" />

            <Button
                android:layout_width="105dp"
                android:layout_height="80dp"
                android:textColor="#FFF"
                android:textSize="30sp"
                android:text="@string/del"
                android:id="@+id/del"
                />
            <Button
                android:layout_width="105dp"
                android:layout_height="fill_parent"
                android:textSize="30sp"
                android:textColor="#FFF"
                android:text="@string/add"
                android:id="@+id/add"
                />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="#FFF"
                android:text="@string/seven"
                android:id="@+id/seven"/>

            <Button
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="#FFF"
                android:text="@string/eight"
                android:id="@+id/eight"/>

            <Button
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="#FFF"
                android:text="@string/nine"
                android:id="@+id/nine" />

            <Button
                android:layout_width="105dp"
                android:layout_height="fill_parent"
                android:textSize="40sp"
                android:textColor="#FFF"
                android:text="@string/divide"
                android:id="@+id/divide" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <Button
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="#FFF"
                android:text="@string/four"
                android:id="@+id/four"
                />

            <Button
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="#FFF"
                android:text="@string/five"
                android:id="@+id/five"
                />

            <Button
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="#FFF"
                android:text="@string/six"
                android:id="@+id/six"
                />

            <Button
                android:layout_width="105dp"
                android:layout_height="fill_parent"
                android:textSize="40sp"
                android:textColor="#FFF"
                android:text="@string/multiply"
                android:id="@+id/multiply"
                />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <Button
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="#FFF"
                android:text="@string/one"
                android:id="@+id/one"
                />

            <Button
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="#FFF"
                android:text="@string/two"
                android:id="@+id/two"
                />

            <Button
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="#FFF"
                android:text="@string/three"
                android:id="@+id/three"
                />

            <Button
                android:layout_width="105dp"
                android:layout_height="fill_parent"
                android:textSize="40sp"
                android:textColor="#FFF"
                android:text="@string/cut"
                android:id="@+id/cut"
                />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <Button
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="#FFF"
                android:text="@string/spot"
                android:id="@+id/spot"
                />

            <Button
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="#FFF"
                android:text="@string/zero"
                android:id="@+id/zero"
                />

            <Button
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="#FFF"
                android:text="@string/equal"
                android:id="@+id/equal"
                />


        </LinearLayout>

    </TableLayout>

</LinearLayout>